--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -16,6 +16,8 @@ header {
 }
 nav {
     padding-right: 40px;
+    display: flex;
+    flex-wrap: nowrap;
 }
 nav a {
     color: black;
@@ -24,12 +26,50 @@ nav span {
     display: inline-block;
     padding: 20px 10px;
 }
+h1 {
+    font-weight: bold;
+    font-size: 30px;
+    display: block;
+}
 .column {
     display: flex;
     flex-direction: column;
 }
+.column.large {
+    width: 630px;
+    flex-shrink: 0;
+    margin-right: 32px;
+}
+.column.column.large .row {
+    justify-content: space-between;
+}
+.column.large .row .column{
+    width: 300px;
+}
+.column.medium {
+    width: 300px;
+    flex-shrink: 0;
+    margin-right: 32px;
+}
+.column.small {
+    width: 240px;
+    flex-shrink: 0;
+}
+.image {
+    height: 300px;
+    color: white;
+    justify-content: center;
+    align-content: center;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
 .row {
     display: flex;
+}
+.substory {
+    height: 250px;
+    margin-bottom: 20px;
 }
 #logo {
     display: flex;
@@ -47,6 +87,41 @@ nav span {
 #content {
     position: relative;
     font-family: Georgia;
+    font-size: 17px;
+    color: black;
     top: 81px;
-    display: flex;
+    justify-content: center;
+}
+#content row {
+    justify-content: space-between;
+}
+#lead h1 {
+    font-size: 40px;
+    text-align: left;
+    margin-left: 20px;
+}
+#lead .image {
+    background-image: url("../img/img-story-main.png");
+}
+#sub-1 .image {
+    background-image: url("../img/img-story-2.png");
+}
+#sub-2 .image {
+    background-image: url("../img/img-story-3.png");
+}
+.column.medium .image {
+    background-image: url("../img/img-story-1.png");
+}
+h3 {
+    text-align: center;
+    font-size: 16px;
+    margin-bottom: 41px;
+}
+.list-item {
+    padding: 11px 20px;
+    background-color: whitesmoke;
+    border-bottom: 1px solid black;
+    color: dimgray;
+    font-family: Verdana;
+    font-size: 12px;
 }
