--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -14,6 +14,17 @@ header {
     left: 0px;
     background-color: white;
 }
+footer {
+    position: relative;
+    background-color: mediumaquamarine;
+    height: 325px;
+    font-family: Verdana;
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
 nav {
     padding-right: 40px;
     display: flex;
@@ -30,6 +41,11 @@ h1 {
     font-weight: bold;
     font-size: 30px;
     display: block;
+}
+h3 {
+    text-align: center;
+    font-size: 16px;
+    margin-bottom: 41px;
 }
 .column {
     display: flex;
@@ -64,6 +80,14 @@ h1 {
     flex-direction: column;
     text-align: center;
 }
+.list-item {
+    padding: 11px 20px;
+    background-color: whitesmoke;
+    border-bottom: 1px solid black;
+    color: dimgray;
+    font-family: Verdana;
+    font-size: 12px;
+}
 .row {
     display: flex;
 }
@@ -89,8 +113,10 @@ h1 {
     font-family: Georgia;
     font-size: 17px;
     color: black;
-    top: 81px;
+    margin-top: 80px;
+    padding-top: 30px;
     justify-content: center;
+    margin-bottom: 78px;
 }
 #content row {
     justify-content: space-between;
@@ -109,19 +135,23 @@ h1 {
 #sub-2 .image {
     background-image: url("../img/img-story-3.png");
 }
-.column.medium .image {
-    background-image: url("../img/img-story-1.png");
+#info nav {
+    display: inline-block;
+    padding-left: 25px;
+    padding-right: 0px;
 }
-h3 {
-    text-align: center;
-    font-size: 16px;
-    margin-bottom: 41px;
-}
-.list-item {
-    padding: 11px 20px;
-    background-color: whitesmoke;
-    border-bottom: 1px solid black;
-    color: dimgray;
+#info nav span {
     font-family: Verdana;
     font-size: 12px;
+}
+#info_span{
+    font-family: Georgia;
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+    border-right: 2px solid white;
+    padding-right: 25px;
+}
+.column.medium .image {
+    background-image: url("../img/img-story-1.png");
 }
